--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       widthv = myCanvas.offsetWidth;
       prevw = widthv;
 
-      canvas = createCanvas(widthv, windowHeight * 2);
+      canvas = createCanvas(widthv, windowHeight * 2,WEBGL);
       canvas.style("display", "block"); // Removes extra margins
       canvas.parent("myCanvas");
 
