--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>ACIDWERK</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.2/p5.min.js"></script>
   <script src="./acidworkassets/components.js"></script>
+  <script type="text/javascript" src="https://unpkg.com/default-passive-events"></script>
 </head>
 
 <body>
